--- a/css/main.css
+++ b/css/main.css
@@ -111,7 +111,7 @@ a {
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 800;
-    font-size: 50px;
+    font-size: 36px;
     color: #FFFFFF;
     margin-bottom: 40px;
 }
@@ -218,7 +218,7 @@ a {
     font-style: normal;
     font-weight: 900;
     margin-bottom: 40px;
-    font-size: 45px;
+    font-size: 36px;
     color: #FFFFFF
 }
 
@@ -501,6 +501,119 @@ a {
 }
 
 /* Branding page end */
+
+
+/* Plans page start */
+
+.plans-section .section-heading {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 36px;
+    color: #FFFFFF;
+}
+
+.plans-section .pricing-card {
+    background: #242528;
+    border-radius: 12px;
+    padding-bottom: 50px;
+}
+
+.plans-section .pricing-card .card-head {
+    text-align: center;
+    color: #fff;
+    padding: 30px 0 60px 0;
+    border-bottom: 1px solid #2D2E31;
+}
+
+.plans-section .pricing-card .card-head .card-profile {
+    display: flex;
+}
+
+.plans-section .pricing-card .card-head .card-profile .profile-info h4 {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 22px;
+    color: #FFFFFF;
+}
+
+.plans-section .pricing-card .card-head .card-profile .profile-info h4 span {
+    font-weight: 500;
+    font-size: 22px;
+    color: #EBFF00;
+    
+}
+
+.plans-section .pricing-card .card-head .card-profile .profile-info .pro-btn {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    color: #FFFFFF;
+    padding: 6px 18px;
+    background: #3927FF;
+    border-radius: 5px;
+}
+
+.plans-section .pricing-card .card-head h4 {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 22px;
+    color: #FFFFFF;  
+}
+
+.plans-section .pricing-card .card-body {
+    color: #fff;
+    padding: 10px 0;
+}
+
+.plans-section .pricing-card .card-body small {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    padding: 0 10px;
+    color: #737373;    
+}
+
+.plans-section .pricing-card .card-body p {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 24px;
+    padding-top: 0 !important;
+    color: #FFFFFF;
+    padding: 10px;
+    border-bottom: 1px solid #2D2E31;
+}
+
+.plans-section .pricing-card .card-body ul {
+    width: 100%;
+    padding: 0;
+    margin: 0;
+}
+
+.plans-section .pricing-card .card-body ul li {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    color: #FFFFFF;
+    list-style-type: none;
+    padding: 30px 0;
+    border-bottom: 1px solid #2D2E31;
+    text-align: center;
+}
+
+.plans-section .pricing-card .card-body ul li img {
+    width: 40px;
+    height: 40px;
+}
+
+/* Plans page end */
 
 
 /* Main Styling Start */
