Done project few thing left

--- a/css/main.css
+++ b/css/main.css
@@ -312,7 +312,7 @@ a {
     font-size: 12px;
     color: #fff;
     padding: 7px 11px;
-    border-radius: 5px;
+    border-radius: 5px;   
 }
 
 .bg-red {
@@ -520,19 +520,21 @@ a {
 }
 
 .plans-section .pricing-card .card-head {
-    text-align: center;
     color: #fff;
-    padding: 30px 0 60px 0;
     border-bottom: 1px solid #2D2E31;
+    padding: 30px 20px 60px 20px;
+
+    height: 150px;
 }
 
 .plans-section .pricing-card .card-head .card-profile {
     display: flex;
+    position: relative;
+    gap: 10px;
 }
 
 .plans-section .pricing-card .card-head .card-profile .profile-info h4 {
     font-family: 'Poppins';
-    font-style: normal;
     font-weight: 500;
     font-size: 22px;
     color: #FFFFFF;
@@ -547,13 +549,45 @@ a {
 
 .plans-section .pricing-card .card-head .card-profile .profile-info .pro-btn {
     font-family: 'Poppins';
+    font-weight: 300;
+    font-size: 10px;
+    color: #FFFFFF;
+    padding: 6px 10px;
+    display: table;
+    margin-bottom: 4px;
+    align-items: center;
+    background: #3927FF;
+    border-radius: 5px;
+}
+
+.plans-section .pricing-card .card-head .card-profile .profile-info .last-pro-btn {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 10px;
+    color: #FFFFFF;
+    padding: 6px 10px;
+    background: linear-gradient(90deg, #5865F2 -4.46%, #910DF9 119.64%);
+    border-radius: 6px;
+    position: absolute;
+    top: -20px;
+    right: -10px;
+}
+
+.plans-section .pricing-card .card-body .pricing-card-btn {
+    font-family: 'Poppins';
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
-    color: #FFFFFF;
-    padding: 6px 18px;
-    background: #3927FF;
+    /* line-height: 24px; */
+    padding: 6px 10px;
     border-radius: 5px;
+    border: 1px solid #B04BFF;   
+    background: linear-gradient(90.48deg, #958DD8 -12.6%, #5669BA 116.14%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-fill-color: transparent;
 }
 
 .plans-section .pricing-card .card-head h4 {
@@ -566,7 +600,8 @@ a {
 
 .plans-section .pricing-card .card-body {
     color: #fff;
-    padding: 10px 0;
+    padding: 10px 10px;
+    height: 700px;
 }
 
 .plans-section .pricing-card .card-body small {
@@ -609,8 +644,7 @@ a {
 }
 
 .plans-section .pricing-card .card-body ul li img {
-    width: 40px;
-    height: 40px;
+    width: 18px;
 }
 
 /* Plans page end */
