--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,27 @@
     outline: 0;
     border: none;
 }
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+
+img {
+    pointer-events: none;
+}
+
+
+::-webkit-scrollbar-track {
+  background:  linear-gradient(90deg, #5865F2 0.01%, #910DF9 100%);
+}
+
+::-webkit-scrollbar-thumb {
+  background: transparent;
+  box-shadow: 0px 0px 0px 100000vh black;
+}
+ 
+
 html {
     height: 100%;
 }
@@ -16,6 +37,7 @@ body {
     height: 100%;
     display: flex;
     flex-direction: column;
+    overflow-x: hidden !important;
 }
 
 a {
@@ -59,7 +81,15 @@ a {
     font-weight: 400;
     margin: 0 18px;
     font-size: 16px;
-    color: #FFFFFF;
+    color: #ffff;
+}
+
+.navbar .navbar-nav .nav-item .nav-link:hover { 
+    background: linear-gradient(90deg, #367AFF -1.6%, #B04BFF 102.8%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-fill-color: transparent;
 }
 
 .navbar .navbar-nav .nav-item .nav-btn {
@@ -606,7 +636,7 @@ a {
 
 .plans-section .pricing-card .card-body {
     color: #fff;
-    padding: 10px 10px;
+    padding: 20px 0px;
     height: 700px;
 }
 
@@ -773,6 +803,14 @@ main .imprint-content  p {
     line-height: 24px;
     color: #969696;
 
+}
+
+#footer .footer-links ul li a:hover {
+    background: linear-gradient(90deg, #367AFF -1.6%, #B04BFF 102.8%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-fill-color: transparent;
 }
 
 
