--- a/css/main.css
+++ b/css/main.css
@@ -1267,6 +1267,72 @@ main .guilds-details-section .guilds-tag small {
 
 /* GUILDS DETAILS PAGE END */
 
+/* LEADERBOARD PAGE START */
+
+.support-section .support-card {
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: rgba(36, 37, 40, 0.7);
+    border-radius: 12px;
+}
+
+.support-section .support-card .card-item-left {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.support-section .support-card .card-item-left img {
+    width: 100px;
+}
+
+.support-section .support-card .card-item-left div h4 {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    color: #FFFFFF;
+    margin-bottom: 0;
+}
+
+.support-section .support-card .card-item-left div small {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 14px;
+    color: #969696;
+}
+
+.support-section .support-card .card-item-right .service-card {
+    display: flex;
+    align-items: center;
+    gap: 70px;
+    padding: 10px;
+    background: #242528;
+    border-radius: 12px;
+}
+
+.support-section .support-card .card-item-right .service-card .card-content h4 {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    color: #FFFFFF;
+    margin-bottom: 0;
+}
+
+.support-section .support-card .card-item-right .service-card .card-content small {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 14px;
+    color: #969696
+}
+
+/* LEADERBOARD PAGE END */
+
 
 @media only screen and (max-width: 600px) {
     .navbar .navbar-nav .nav-item .nav-btn {
