--- a/css/main.css
+++ b/css/main.css
@@ -1389,10 +1389,11 @@ main .guilds-details-section .guilds-tag small {
 }
 
 .leaderboard-table-section table tbody .table-progress .progress-bar {
-    color: rgba(36, 37, 40, 0.7);
+    color: #fff;
     background: linear-gradient(90deg, #367AFF -1.31%, rgba(176, 75, 255, 1) 121.69%);
     /* filter: blur(2px) !important; */
     border-radius: 12px;
+    c
 }
 
 .leaderboard-table-section table tbody .table-progress .progress { 
